--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ button[type="submit"]{
 footer{
     background: #222;
     color: white;
-    teext-align:center;
+    text-align:center;
     padding: 2rem;
 }
 
